@@ -8,8 +8,8 @@
     exceptions header by directly checking for the include file -- an
     approach provided by Martin Morgan in a kindly contributed patch
     as unit tests for them.
-    \item The \code{Date} type now correctly handles \code{NA},
-    \code{NaN} and \code{Inf} representation
+    \item The \code{Date} and \code{Datetime} types now correctly
+    handles \code{NA}, \code{NaN} and \code{Inf} representation
   }
 }
 
